// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses empty ineligible offenses array 1`] = `
Object {
  "eligibleCriteria": Object {
    "usPaFulfilledRequirements": Object {
      "eligibleDate": 2023-12-01T00:00:00.000Z,
    },
    "usPaNoHighSanctionsInPastYear": Object {
      "latestHighSanctionDate": 2022-02-02T00:00:00.000Z,
    },
    "usPaNotServingIneligibleAsOffense": Object {
      "ineligibleOffenses": Array [],
      "ineligibleSentencesExpirationDate": Array [],
    },
    "usPaSupervisionLevelIsNotLimited": Object {
      "limitedStartDate": null,
      "supervisionLevel": "EXAMPLE",
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": Object {},
  "stateCode": "US_PA",
}
`;

exports[`parses null reason fields 1`] = `
Object {
  "eligibleCriteria": Object {
    "usPaFulfilledRequirements": null,
    "usPaNoHighSanctionsInPastYear": null,
    "usPaNotServingIneligibleAsOffense": null,
    "usPaSupervisionLevelIsNotLimited": Object {
      "limitedStartDate": null,
      "supervisionLevel": "EXAMPLE",
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": Object {},
  "stateCode": "US_PA",
}
`;

exports[`record parses as expected 1`] = `
Object {
  "eligibleCriteria": Object {
    "usPaFulfilledRequirements": Object {
      "eligibleDate": 2023-12-01T00:00:00.000Z,
    },
    "usPaNoHighSanctionsInPastYear": Object {
      "latestHighSanctionDate": 2022-02-02T00:00:00.000Z,
    },
    "usPaNotServingIneligibleAsOffense": Object {
      "ineligibleOffenses": Array [
        "ABC",
        "DEF",
      ],
      "ineligibleSentencesExpirationDate": Array [
        2023-06-01T00:00:00.000Z,
        2022-01-01T00:00:00.000Z,
      ],
    },
    "usPaSupervisionLevelIsNotLimited": Object {
      "limitedStartDate": null,
      "supervisionLevel": "EXAMPLE",
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": Object {},
  "stateCode": "US_PA",
}
`;
